iptables
# Generated by iptables-save v1.4.7 on Tue Feb  4 08:41:54 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5159:3290417]
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 208.106.255.6 -j DROP
-A INPUT -s 207.114.135.145 -j DROP
-A INPUT -s 191.115.118.148 -j DROP
-A INPUT -s 190.208.108.149 -j DROP
-A INPUT -s 179.7.72.133 -j DROP
-A INPUT -s 179.7.218.68 -j DROP
-A INPUT -s 179.7.219.4 -j DROP
-A INPUT -s 104.200.151.0/24 -j DROP
-A INPUT -s 104.33.91.236 -j DROP
-A INPUT -s 153.125.237.207 -j DROP
-A INPUT -s 177.227.241.217 -j DROP
-A INPUT -s 177.247.37.80 -j DROP
-A INPUT -s 179.7.73.5 -j DROP
-A INPUT -s 179.7.95.133 -j DROP
-A INPUT -s 187.186.223.39 -j DROP
-A INPUT -s 188.27.33.208 -j DROP
-A INPUT -s 189.212.248.6 -j DROP
-A INPUT -s 190.161.231.215 -j DROP
-A INPUT -s 190.37.204.136 -j DROP
-A INPUT -s 190.162.129.149 -j DROP
-A INPUT -s 191.115.55.243 -j DROP
-A INPUT -s 200.52.56.77 -j DROP
-A INPUT -s 62.147.202.200 -j DROP
-A INPUT -s 66.8.186.100 -j DROP
-A INPUT -s 66.8.186.100 -j DROP
-A INPUT -s 67.180.245.72 -j DROP
-A INPUT -s 67.180.245.72 -j DROP
-A INPUT -s 70.162.95.10 -j DROP
-A INPUT -s 70.162.95.10 -j DROP
-A INPUT -s 72.199.100.8 -j DROP
-A INPUT -s 73.189.105.88 -j DROP
-A INPUT -s 73.189.70.135 -j DROP
-A INPUT -s 73.189.70.135 -j DROP
-A INPUT -s 73.222.168.7 -j DROP
-A INPUT -s 23.240.195.83 -j DROP
-A INPUT -s 8.19.93.59 -j DROP
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 

-A INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
